<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <PreferenceCategory android:title="@string/prefs_sms_category" > -->


    <!-- </PreferenceCategory> -->
    <PreferenceCategory android:title="@string/prefs_geoping_request" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="authorizeNewGeopingPairing"
            android:summaryOff="@string/prefs_block_geoping_pairing_summaryOff"
            android:summaryOn="@string/prefs_block_geoping_pairing_summaryOn"
            android:title="@string/prefs_block_geoping_pairing" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showGeopingNotification"
            android:summary="@string/prefs_show_geoping_notification_summary"
            android:title="@string/prefs_show_geoping_notification" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="localSave"
            android:summaryOff="@string/prefs_geoping_localSave_summaryOff"
            android:summaryOn="@string/prefs_geoping_localSave_summaryOn"
            android:title="@string/prefs_geoping_localSave" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_geoping_request" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="myLocationDisplayLatlng"
            android:title="@string/prefs_myLocation_display_LatLng" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_geoping_geoPoint_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="geoPointGeocodingAuto"
            android:title="@string/prefs_geoPoint_geocoding_auto" />
    </PreferenceCategory>
    <PreferenceCategory
        android:icon="@drawable/ic_action_about"
        android:title="@string/prefs_info" >
        <eu.ttbox.geoping.ui.prefs.comp.version.AppVersionPreference
            android:defaultValue="unknow"
            android:title="@string/prefs_version" />

        <eu.ttbox.geoping.ui.prefs.comp.version.DisplayIntPreference
            android:defaultValue="0"
            android:key="APP_COUNT_LAUGHT"
            android:summary="@string/prefs_count_laught_summary"
            android:title="@string/prefs_count_laught" />

        <PreferenceScreen android:title="@string/prefs_developement" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="smsDeleteOnMessage"
                android:summaryOff="@string/prefs_sms_delete_onMessage_summaryOff"
                android:summaryOn="@string/prefs_sms_delete_onMessage_summaryOn"
                android:title="@string/prefs_sms_delete_onMessage" />
        </PreferenceScreen>

        <Preference android:title="@string/prefs_about" >
            <intent
                android:action="eu.ttbox.geoping.ui.about.ACTION_VIEW_ABOUT"
                android:targetClass="eu.ttbox.geoping.ui.about.AboutActivity"
                android:targetPackage="eu.ttbox.geoping" />
        </Preference>
        <!-- <Preference -->
        <!-- android:title="@string/prefs_licence" > -->
        <!-- <intent -->
        <!-- android:action="eu.ttbox.geoping.ui.about.ACTION_VIEW_LICENCE" -->
        <!-- android:targetClass="eu.ttbox.geoping.ui.about.AboutActivity" -->
        <!-- android:targetPackage="eu.ttbox.geoping" /> -->
        <!-- </Preference> -->


        <!-- <Preference -->
        <!-- android:icon="@drawable/ic_action_help" -->
        <!-- android:title="@string/prefs_help" > -->
        <!-- <intent -->
        <!-- android:action="android.intent.action.VIEW" -->
        <!-- android:targetClass="eu.ttbox.velib.ui.help.HelpTabLayoutActivity" -->
        <!-- android:targetPackage="eu.ttbox.velib" /> -->
        <!-- </Preference> -->
    </PreferenceCategory>

</PreferenceScreen>