<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <PreferenceCategory android:title="@string/prefs_sms_category" > -->


    <!-- </PreferenceCategory> -->
    <PreferenceCategory android:title="@string/menu_pairing" >
        <eu.ttbox.geoping.ui.prefs.comp.IntEditTextPreference
                android:defaultValue="30"
                android:key="requestTimeoutInS"
                android:numeric="integer"
                android:title="@string/prefs_geoping_request_timeout_ms" />
        <eu.ttbox.geoping.ui.prefs.comp.IntEditTextPreference
                android:defaultValue="-1"
                android:key="requestAccuracyExpectedInM"
                android:numeric="integer"
                android:title="@string/prefs_geoping_request_accuracy_expected_m" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_geoping_request" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="authorizeNewGeopingPairing"
            android:summaryOff="@string/prefs_block_geoping_pairing_summaryOff"
            android:summaryOn="@string/prefs_block_geoping_pairing_summaryOn"
            android:title="@string/prefs_block_geoping_pairing" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showGeopingNotification"
            android:summary="@string/prefs_show_geoping_notification_summary"
            android:title="@string/prefs_show_geoping_notification" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="localSave"
            android:summaryOff="@string/prefs_geoping_localSave_summaryOff"
            android:summaryOn="@string/prefs_geoping_localSave_summaryOn"
            android:title="@string/prefs_geoping_localSave" />
    </PreferenceCategory>
     
    

</PreferenceScreen>