<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geoping="http://schemas.android.com/apk/res/eu.ttbox.geoping"
    android:id="@+id/slidingmenu_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
            android:id="@+id/menuMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            geoping:src="@drawable/ic_location_web_site"
            geoping:text="@string/menu_map" />

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
            android:id="@+id/menu_track_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            geoping:src="@drawable/ic_action_user"
            geoping:text="@string/menu_person" />

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
            android:id="@+id/menu_pairing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            geoping:src="@drawable/ic_device_access_secure"
            geoping:text="@string/menu_pairing" />

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
                android:id="@+id/menu_geofence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                geoping:src="@drawable/ic_action_geofence"
                geoping:text="@string/menu_geofence" />

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
            android:id="@+id/menu_smslog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            geoping:src="@drawable/ic_collections_go_to_today"
            geoping:text="@string/menu_smslog" />

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            geoping:src="@android:drawable/ic_menu_preferences"
            geoping:text="@string/menu_settings" />

        <eu.ttbox.geoping.ui.slidingmenu.SlindingMenuItemView
                android:visibility="gone"
            android:id="@+id/menu_extra_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            geoping:src="@android:drawable/ic_menu_more"
            geoping:text="@string/menu_extra_feature" />

        <TextView
            android:id="@+id/slidingmenu_person_list_title"
            style="@style/entity_list_item"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:text="Familly"
            android:textIsSelectable="false" />

        <ListView
            android:id="@+id/slidingmenu_person_list"
            android:layout_width="match_parent" 
            android:layout_height="300dp"
            android:isScrollContainer="false"
            android:paddingLeft="@dimen/list_padding"
            android:paddingRight="@dimen/list_padding" />
    </LinearLayout>

</ScrollView>